--- a/src/Components/CONTACT/contact.css
+++ b/src/Components/CONTACT/contact.css
@@ -1,5 +1,5 @@
 .contact {
-  padding-bottom: 4rem;
+  padding-block: 3rem;
 }
 
 .contact-container {
@@ -69,7 +69,7 @@
 .contact-form {
   display: flex;
   flex-direction: column;
-  gap: 0.7rem;
+  gap: 0.8rem;
   margin: 0 auto;
 }
 
@@ -77,7 +77,6 @@
   padding: 0.5rem;
   border-radius: 0.5rem;
   border: none;
-  box-shadow: 0 0 16px 0 rgba(0, 0, 0, 0.1);
   width: 30vw;
   max-width: 25rem;
 }
@@ -86,12 +85,11 @@
   padding: 0.5rem;
   border-radius: 0.5rem;
   border: none;
-  box-shadow: 0 0 16px 0 rgba(0, 0, 0, 0.1);
   resize: none;
 }
 
 .submit-btn {
-  background-color: #ffa70fe2;
+  background: #ffa70fe2;
   color: white;
   font-weight: bold;
   padding: 0.5rem;
@@ -100,7 +98,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 1rem;
+  gap: 0.5rem;
   cursor: pointer;
   width: 30vw;
   max-width: 25rem;
