--- a/src/Components/HERO/hero.css
+++ b/src/Components/HERO/hero.css
@@ -1,8 +1,8 @@
 .hero {
   padding-top: 8rem;
-  padding-bottom: 5rem;
+  padding-bottom: 3rem;
   background: linear-gradient(to right, #166735, #1a3243);
-  color: #a8a8a8;
+  color: white;
 }
 
 .hero-container {
@@ -11,24 +11,22 @@
   align-items: center;
   max-width: 1200px;
   margin: 0 auto;
-  padding: 0 20px;
+  padding: 0 30px;
+  gap: 20px;
 }
 
 .left {
   text-align: left;
-  margin-right: 20px;
 }
 
 .right {
   text-align: right;
-  margin-left: 20px;
 }
 
 .left h2 {
   font-size: 36px;
   font-weight: bold;
   margin-bottom: 20px;
-  color: white;
 }
 
 h1 {
@@ -37,11 +35,12 @@ h1 {
 
 .description {
   font-size: 15px;
-  margin-top: 10px;
+  margin-top: 50px;
+  max-width: 600px;
 }
 
 .buttons {
-  margin-top: 5rem;
+  margin-top: 3rem;
 }
 
 .buttons a {
@@ -87,7 +86,6 @@ h1 {
   border-radius: 50%;
   margin: 0 auto;
   overflow: hidden;
-  margin: 10px;
 }
 
 .image img {
@@ -103,7 +101,7 @@ h1 {
   }
   .left {
     order: 2;
-    margin-top: 30px;
+    margin-top: 20px;
   }
   .right {
     order: 1;
