--- a/src/Components/SKILLS/skills.css
+++ b/src/Components/SKILLS/skills.css
@@ -1,6 +1,5 @@
 .skills {
-  padding-top: 4rem;
-  padding-bottom: 4rem;
+  padding-block: 3rem;
 }
 
 .skills-container {
@@ -37,10 +36,10 @@
   display: flex;
 }
 
-/* Left box styles */
-.skills-left {
+.skills-side {
   width: 50%;
   padding: 1rem;
+  border: 2px solid red;
 }
 
 .skills-description {
@@ -57,44 +56,34 @@
   width: 80%;
 }
 
-.skills-right {
-  width: 50%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.skills-part2 {
+  min-height: 360px;
+  padding-block: 1rem;
+  margin-top: -60px;
+  border: 2px solid red;
   justify-content: center;
+  gap: 5%;
+  display: flex;
+  flex-wrap: wrap;
 }
 
-.skills-first2 {
-  display: flex;
-  gap: 1rem;
-}
-
-.skills-last2 {
-  display: flex;
-  gap: 1rem;
+@media screen and (min-width: 1110px) {
+  .skills-part2 {
+    margin-top: 0px;
+  }
 }
 
 @media screen and (max-width: 768px) {
-  .skills-container {
+  .skills-content {
     padding-inline: 1rem;
-  }
-
-  .skills-right {
-    width: 50%;
-    display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
   }
 
-  .skills-first2 {
-    display: flex;
-    gap: 0rem;
+  .skills-part2 {
+    margin-top: 0px;
   }
 
-  .skills-last2 {
-    display: flex;
-    gap: 0rem;
+  .skills-side {
+    width: 100%;
   }
 }
