--- a/src/Helpers/SkillBox/skillbox.css
+++ b/src/Helpers/SkillBox/skillbox.css
@@ -1,13 +1,13 @@
 .skill-box {
-  width: 9rem;
-  height: 9.5rem;
-  margin: 1rem;
+  width: 8rem;
+  height: 8.5rem;
+  margin: 0.5rem;
   border-radius: 0.5rem;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 0.5rem;
+  gap: 10%;
   background-color: rgba(130, 130, 130, 0.263);
   box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.472);
 }
@@ -27,25 +27,4 @@
 .skill-text {
   font-weight: bold;
   font-size: 1rem;
-}
-
-@media screen and (max-width: 768px) {
-  .skill-box {
-    width: 5.5rem;
-    height: 7rem;
-    margin-bottom: 0.5rem;
-    gap: 0.8rem;
-    margin-inline: 1vw;
-  }
-
-  .logo-box {
-    width: 3rem;
-    height: 3rem;
-    font-size: 1.8rem;
-  }
-
-  .skill-text {
-    font-weight: bold;
-    font-size: 0.8rem;
-  }
 }
