--- a/src/Components/WORKS/works.css
+++ b/src/Components/WORKS/works.css
@@ -1,6 +1,8 @@
 .works {
   padding-block: 3rem;
   background: linear-gradient(to right, #166735, #1a3243);
+  position: relative;
+  z-index: 2;
 }
 
 .works-container {
