--- a/src/Components/FOTTER/fotter.css
+++ b/src/Components/FOTTER/fotter.css
@@ -1,6 +1,8 @@
 .fotter {
-  background-color: rgba(255, 187, 0, 0.507);
-  padding: 1.5rem 0;
+  padding-block: 3rem;
+  background: linear-gradient(to right, #166735, #1a3243);
+  position: relative;
+  z-index: 2;
   text-align: center;
 }
 
