--- a/src/Components/HEADER/header.css
+++ b/src/Components/HEADER/header.css
@@ -1,7 +1,6 @@
 header {
   position: relative;
   height: 100vh;
-  width: 100vw;
 }
 
 #particles {
@@ -9,7 +8,7 @@ header {
   height: 100%;
   width: 100%;
   z-index: 0;
-  background-color: rgb(0, 0, 0);
+  background-color: #171717;
 }
 
 .info-text {
