--- a/src/Components/HERO/hero.css
+++ b/src/Components/HERO/hero.css
@@ -1,8 +1,9 @@
 .hero {
-  padding-top: 8rem;
-  padding-bottom: 3rem;
+  position: relative;
   background: linear-gradient(to right, #166735, #1a3243);
   color: white;
+  z-index: 2;
+  height: 30rem;
 }
 
 .hero-container {
@@ -13,14 +14,19 @@
   margin: 0 auto;
   padding: 0 30px;
   gap: 20px;
+  height: 100%;
 }
 
 .left {
   text-align: left;
+  width: 50%;
 }
 
 .right {
   text-align: right;
+  position: relative;
+  width: 50%;
+  height: 100%;
 }
 
 .left h2 {
@@ -34,25 +40,33 @@ h1 {
 }
 
 .description {
-  font-size: 15px;
-  margin-top: 50px;
+  margin-top: 20px;
   max-width: 600px;
+  text-align: justify;
+}
+
+.description span {
+  font-size: 16px;
 }
 
 .buttons {
   margin-top: 3rem;
+  display: flex;
+  justify-content: space-between;
 }
 
 .buttons a {
-  display: inline-block;
-  margin-right: 20px;
+  display: flex;
   padding: 10px 20px;
   background-color: #171717;
   color: white;
   text-decoration: none;
   font-weight: bold;
-  border-radius: 10px;
+  border-radius: 15px;
   transition: background-color 0.3s;
+  gap: 10px;
+  justify-content: center;
+  align-items: center;
 }
 
 .buttons a:hover {
@@ -74,23 +88,29 @@ h1 {
   color: #ffffff;
   font-size: 24px;
   transition: color 0.2s;
+  display: flex;
+  gap: 5px;
 }
 
 .icons a:hover {
   color: #949494;
 }
 
+.icons span {
+  font-size: 16px;
+}
+
 .image {
-  width: 100%;
-  max-width: 400px;
-  border-radius: 50%;
-  margin: 0 auto;
+  position: absolute;
+  left: 10%;
+  bottom: 0;
+  max-width: 600px;
   overflow: hidden;
 }
 
 .image img {
   width: 100%;
-  height: auto;
+  max-height: 32rem;
   display: block;
 }
 
