--- a/src/Components/SKILLS/skills.css
+++ b/src/Components/SKILLS/skills.css
@@ -1,8 +1,11 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
+
 .skills {
   position: relative;
   z-index: 2;
   background-color: #171717;
   padding-block: 3rem;
+  font-family: "Inter", sans-serif;
 }
 
 .skills-container {
@@ -23,13 +26,13 @@
 .skills-title {
   font-size: 2rem;
   font-weight: bold;
-  color: #ccc;
+  color: #ffffff;
 }
 
 .skills-divider {
   height: 1px;
   width: 90%;
-  background-color: #afafaf;
+  background-color: #ffffff;
   position: absolute;
   bottom: 0;
   margin-left: 7%;
@@ -37,34 +40,49 @@
 
 .skills-content {
   display: flex;
+  gap: 50px;
+  margin-block: 30px;
 }
 
-.skills-side {
-  width: 50%;
-  padding: 1rem;
-}
-
-.skills-description {
-  margin-top: 1rem;
-  margin-bottom: 1rem;
-}
-
-.skills-progress {
+.descriptioncontainer {
+  width: 60%;
   display: flex;
-  justify-content: center;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 
-.skills-progress-container {
-  width: 80%;
+.item:first-child {
+  width: 100%;
 }
 
-.skills-part2 {
-  min-height: 360px;
-  padding-block: 1rem;
-  margin-top: -60px;
+.item {
+  display: flex;
+  flex-direction: column;
+  width: 48%;
+  padding: 20px;
+  margin-block: 10px;
+  background-color: #0e0d0d;
+  border: 1px solid #27272a;
+  border-radius: 14px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  gap: 5px;
+  text-align: justify;
+}
 
+.item:hover h3 {
+  color: #166735;
+}
+
+.skillscontainer {
+  display: flex;
+  flex-direction: column;
+  width: 40%;
+}
+
+.skills-part3 {
   justify-content: center;
-  gap: 5%;
+  gap: 2%;
   display: flex;
   flex-wrap: wrap;
 }
