--- a/src/Components/HERO/hero.css
+++ b/src/Components/HERO/hero.css
@@ -8,7 +8,6 @@
 
 .hero-container {
   display: flex;
-  justify-content: space-between;
   align-items: center;
   max-width: 1200px;
   margin: 0 auto;
@@ -18,8 +17,7 @@
 }
 
 .left {
-  text-align: left;
-  width: 50%;
+  width: 60%;
 }
 
 .right {
@@ -32,7 +30,6 @@
 .left h2 {
   font-size: 36px;
   font-weight: bold;
-  margin-bottom: 20px;
 }
 
 h1 {
@@ -40,7 +37,7 @@ h1 {
 }
 
 .description {
-  margin-top: 20px;
+  margin-top: 50px;
   max-width: 600px;
   text-align: justify;
 }
@@ -50,38 +47,45 @@ h1 {
 }
 
 .buttons {
-  margin-top: 3rem;
+  margin-top: 50px;
   display: flex;
   justify-content: space-between;
 }
 
 .buttons a {
   display: flex;
+  min-width: 150px;
   padding: 10px 20px;
   background-color: #171717;
   color: white;
   text-decoration: none;
   font-weight: bold;
-  border-radius: 15px;
-  transition: background-color 0.3s;
+  border-radius: 20px;
+  transition: 0.3s;
   gap: 10px;
   justify-content: center;
   align-items: center;
+  cursor: pointer;
 }
 
 .buttons a:hover {
-  background-color: #555;
+  background-color: #292929;
+  color: #166735;
+  transform: scale(1.04);
 }
 
 .icons ul {
-  list-style: none;
-  padding: 0;
-  margin-top: 30px;
+  display: flex;
+  gap: 20px;
+  margin-top: 10px;
 }
 
 .icons li {
   display: inline-block;
-  margin-right: 20px;
+}
+
+.icons li:hover {
+  transform: scale(1.1);
 }
 
 .icons a {
@@ -112,6 +116,7 @@ h1 {
   width: 100%;
   max-height: 32rem;
   display: block;
+  filter: drop-shadow(10px 10px 10px rgba(0, 0, 0, 0.5));
 }
 
 @media screen and (max-width: 768px) {
