--- a/src/Components/WORKS/works.css
+++ b/src/Components/WORKS/works.css
@@ -6,9 +6,7 @@
 }
 
 .works-container {
-  align-items: center;
   max-width: 1200px;
-  align-items: center;
   margin: 0 auto;
   padding-inline: 2rem;
 }
@@ -23,13 +21,13 @@
 .works-title {
   font-size: 2rem;
   font-weight: bold;
-  color: #ccc;
+  color: #ffffff;
 }
 
 .works-divider {
   height: 1px;
   width: 90%;
-  background-color: #afafaf;
+  background-color: #ffffff;
   position: absolute;
   bottom: 0;
   margin-left: 7%;
@@ -42,6 +40,7 @@
 
 .works-content {
   display: flex;
+  flex-wrap: wrap;
 }
 
 @media screen and (max-width: 768px) {
