--- a/src/Helpers/ProgressBar/progressbar.css
+++ b/src/Helpers/ProgressBar/progressbar.css
@@ -26,7 +26,7 @@
   height: 100%;
   position: absolute;
   border-radius: 20px;
-  background-color: rgb(255, 187, 0);
+  background-color: #166735;
 }
 
 @keyframes progress-animation {
