--- a/src/Helpers/SkillBox/skillbox.css
+++ b/src/Helpers/SkillBox/skillbox.css
@@ -1,27 +1,33 @@
 .skill-box {
   width: 8rem;
-  height: 8.5rem;
+  height: 8rem;
   margin: 0.5rem;
-  border-radius: 0.5rem;
+  border-radius: 2rem;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 10%;
-  background-color: rgba(130, 130, 130, 0.263);
-  box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.472);
+  gap: 5%;
+  background-color: rgb(50, 50, 50);
+  box-shadow: 0px 10px 10px rgb(0, 0, 0);
+  transition: transform 0.3s ease;
+  cursor: pointer;
+}
+
+.skill-box:hover {
+  transform: scale(1.1);
 }
 
 .logo-box {
   width: 4rem;
   height: 4rem;
-  background-color: black;
+  background: radial-gradient(circle, rgb(0, 0, 0) 30%, rgba(50, 50, 50) 70%);
   color: white;
   border-radius: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 2.5rem;
+  font-size: 1.8rem;
 }
 
 .skill-text {
