--- a/src/Components/CONTACT/contact.css
+++ b/src/Components/CONTACT/contact.css
@@ -18,25 +18,50 @@
   display: flex;
   justify-content: left;
   position: relative;
+  margin-bottom: 30px;
 }
 
 .contact-title {
   font-size: 2rem;
   font-weight: bold;
-  color: #ccc;
+  color: #ffffff;
 }
 
 .contact-divider {
   height: 1px;
   width: 90%;
-  background-color: #afafaf;
+  background-color: #ffffff;
   position: absolute;
   bottom: 0;
   margin-left: 7%;
 }
 
+.left {
+  text-align: right;
+  position: relative;
+  width: 50%;
+  height: 100%;
+}
+
+.image {
+  position: absolute;
+  left: 10%;
+  bottom: 0;
+  max-width: 600px;
+  overflow: hidden;
+}
+
+.image img {
+  width: 100%;
+  max-height: 32rem;
+  display: block;
+  filter: drop-shadow(10px 10px 10px rgba(0, 0, 0, 0.5));
+}
+
 .contact-content {
   display: flex;
+  flex-direction: column;
+  width: 60%;
 }
 
 .contact-text {
