--- a/src/Components/WORKS/works.css
+++ b/src/Components/WORKS/works.css
@@ -16,6 +16,7 @@
   display: flex;
   justify-content: left;
   position: relative;
+  margin-bottom: 30px;
 }
 
 .works-title {
@@ -33,14 +34,44 @@
   margin-left: 7%;
 }
 
-.works-description {
-  margin-top: 1rem;
-  margin-bottom: 1rem;
+.first {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  gap: 20px;
+  justify-content: center;
+  padding: 20px;
+}
+
+.job {
+  display: flex;
+  flex-direction: column;
+  padding: 30px;
+  background-color: rgb(0, 0, 0, 0.8);
+  border: 1px solid #27272a;
+  border-radius: 30px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  gap: 10px;
+  text-align: justify;
+}
+
+.job h3 {
+  display: flex;
+  justify-content: space-between;
+}
+
+.job:hover h3 {
+  color: #166735;
 }
 
 .works-content {
   display: flex;
   flex-wrap: wrap;
+  gap: 20px;
+  margin: 0 auto;
+  justify-content: space-between;
+  padding-inline: 20px;
 }
 
 @media screen and (max-width: 768px) {
