--- a/src/Helpers/WorkCards/workcards.css
+++ b/src/Helpers/WorkCards/workcards.css
@@ -1,27 +1,14 @@
 .flip-card {
   background-color: transparent;
-  max-width: 22rem;
-  min-width: 21rem;
-  height: 15rem;
-  flex: 1;
+  width: 20rem;
+  height: 14rem;
 }
 
-.title {
-  margin-bottom: 10px;
-  font-size: 1.5rem;
-}
-
-.card-image {
-  max-width: 90%;
-  max-height: 90%;
+.flip-card img {
+  width: 100%;
+  height: 80%;
   margin: 0 auto;
   border-radius: 1rem;
-  object-fit: contain;
-}
-
-.description {
-  font-size: 0.8rem;
-  margin-bottom: 1rem;
 }
 
 .flip-card-inner {
@@ -47,16 +34,14 @@
   width: 100%;
   height: 100%;
   backface-visibility: hidden;
-  border: 1px solid white;
-  border-radius: 1rem;
-}
-
-.flip-card-front {
-  background-color: rgba(31, 31, 31, 0.704);
+  border: 1px solid #27272a;
+  border-radius: 2.5rem;
+  padding: 25px;
+  gap: 10px;
+  background-color: rgba(0, 0, 0, 0.8);
 }
 
 .flip-card-back {
-  background-color: rgba(31, 31, 31, 0.704);
   transform: rotateY(180deg);
 }
 
