--- a/src/Components/CONTACT/contact.css
+++ b/src/Components/CONTACT/contact.css
@@ -1,5 +1,5 @@
 .contact {
-  padding-block: 3rem;
+  padding-block: 2rem;
   position: relative;
   z-index: 2;
   background-color: #171717;
@@ -36,61 +36,42 @@
   margin-left: 7%;
 }
 
-.left {
+.contact2 {
+  display: flex;
+  justify-content: center;
+  gap: 80px;
+}
+
+.left2 {
   text-align: right;
   position: relative;
-  width: 50%;
-  height: 100%;
+  width: 40%;
+  height: 330px;
 }
 
 .image {
   position: absolute;
-  left: 10%;
-  bottom: 0;
-  max-width: 600px;
+  bottom: -33px;
   overflow: hidden;
+  transform: scaleX(-1);
 }
 
 .image img {
-  width: 100%;
-  max-height: 32rem;
-  display: block;
   filter: drop-shadow(10px 10px 10px rgba(0, 0, 0, 0.5));
 }
 
 .contact-content {
   display: flex;
   flex-direction: column;
-  width: 60%;
+  gap: 10px;
 }
 
 .contact-text {
   width: 70%;
 }
 
-.contact-left {
-  display: flex;
-  width: 40%;
-  height: 15rem;
-  align-items: center;
-  justify-content: center;
-  font-weight: bold;
-}
-
-.contact-center {
-  width: 20%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 3rem;
-  color: #ffa70fe2;
-  margin-right: 4rem;
-}
-
 .contact-right {
-  width: 40%;
   display: flex;
-  align-items: center;
 }
 
 /* Form styles */
@@ -98,38 +79,37 @@
   display: flex;
   flex-direction: column;
   gap: 0.8rem;
-  margin: 0 auto;
+  width: 100%;
 }
 
 .input {
-  padding: 0.5rem;
-  border-radius: 0.5rem;
+  padding: 12px;
+  border-radius: 20px;
   border: none;
-  width: 30vw;
-  max-width: 25rem;
+  font-size: 15px;
 }
 
 .textarea {
-  padding: 0.5rem;
-  border-radius: 0.5rem;
+  padding: 12px;
+  border-radius: 20px;
   border: none;
   resize: none;
+  font-size: 15px;
 }
 
 .submit-btn {
   background: #ffa70fe2;
   color: white;
   font-weight: bold;
-  padding: 0.5rem;
-  border-radius: 0.5rem;
+  padding: 12px;
+  border-radius: 20px;
   border: none;
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 0.5rem;
   cursor: pointer;
-  width: 30vw;
-  max-width: 25rem;
+  font-size: 15px;
 }
 
 @media screen and (max-width: 768px) {
