--- a/src/Components/HERO/hero.css
+++ b/src/Components/HERO/hero.css
@@ -30,6 +30,7 @@
 .left h2 {
   font-size: 36px;
   font-weight: bold;
+  text-align: center;
 }
 
 h1 {
@@ -39,7 +40,6 @@ h1 {
 .description {
   margin-top: 50px;
   max-width: 600px;
-  text-align: justify;
 }
 
 .description span {
@@ -120,18 +120,43 @@ h1 {
 }
 
 @media screen and (max-width: 768px) {
-  .hero-container {
-    flex-direction: column;
-    text-align: center;
+  .hero {
+    height: 53rem;
+    padding: 0 10px 40px;
   }
+
+  .hero-container {
+    display: flex;
+    flex-direction: column;
+  }
+
   .left {
     order: 2;
-    margin-top: 20px;
+    width: 110%;
+
+    text-align: center;
   }
+
   .right {
     order: 1;
+    width: 85%;
+    display: flex;
   }
+
   .image {
-    max-width: 60vw; /* Ajusta el ancho máximo en relación al ancho de la pantalla */
+    left: 10%;
+    transform: translateX(-5%);
+    margin: 0 auto;
+  }
+
+  .description {
+    margin-top: 20px;
+    max-width: 100%;
+  }
+
+  .buttons a {
+    min-width: 100px;
+
+    font-size: 12px;
   }
 }
