--- a/src/Components/CONTACT/contact.css
+++ b/src/Components/CONTACT/contact.css
@@ -46,14 +46,16 @@
   text-align: right;
   position: relative;
   width: 40%;
-  height: 330px;
+  height: 340px;
 }
 
-.image {
+.contact .image {
   position: absolute;
-  bottom: -33px;
+  left: -20px;
+  bottom: -55px;
   overflow: hidden;
   transform: scaleX(-1);
+  padding: 20px;
 }
 
 .image img {
@@ -63,7 +65,7 @@
 .contact-content {
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 20px;
 }
 
 .contact-text {
@@ -112,44 +114,35 @@
   font-size: 15px;
 }
 
+@media screen and (max-width: 1000px) {
+  .left2 {
+    width: 50%;
+  }
+
+  .contact2 {
+    gap: 0;
+  }
+}
+
 @media screen and (max-width: 768px) {
-  .contact-container {
-    padding-inline: 1rem;
+  .contact2 {
+    flex-direction: column;
+  }
+
+  .left2 {
+    order: 2;
+    width: 75%;
+    margin: 50px auto 0;
   }
 
   .contact-content {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    order: 1;
   }
 
-  .contact-text {
-    width: 100%;
-    align-items: center;
-    justify-content: center;
+  .contact .image {
+    left: 8%;
   }
+}
 
-  .contact-left {
-    width: 80%;
-    height: 12rem;
-    text-align: center;
-  }
-
-  .contact-center {
-    transform: rotate(90deg);
-    margin-bottom: 3rem;
-    margin-right: 0;
-  }
-
-  .contact-right {
-    width: 80%;
-  }
-
-  .input {
-    width: 50vw;
-  }
-
-  .submit-btn {
-    width: 50vw;
-  }
+@media screen and (max-width: 1000px) {
 }
