--- a/src/Components/SKILLS/skills.css
+++ b/src/Components/SKILLS/skills.css
@@ -87,23 +87,20 @@
   flex-wrap: wrap;
 }
 
-@media screen and (min-width: 1110px) {
-  .skills-part2 {
-    margin-top: 0px;
-  }
-}
-
 @media screen and (max-width: 768px) {
   .skills-content {
-    padding-inline: 1rem;
     flex-direction: column;
   }
 
-  .skills-part2 {
-    margin-top: 0px;
+  .skillscontainer {
+    width: 100%;
+    padding-left: 20px;
   }
 
-  .skills-side {
+  .descriptioncontainer {
     width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
   }
 }
