--- a/src/Components/WORKS/works.css
+++ b/src/Components/WORKS/works.css
@@ -75,7 +75,7 @@
 }
 
 @media screen and (max-width: 768px) {
-  .works-container {
-    padding-inline: 1rem;
+  .works-content {
+    gap: 10px;
   }
 }
