--- a/src/Components/HERO/hero.css
+++ b/src/Components/HERO/hero.css
@@ -137,6 +137,11 @@ h1 {
     text-align: center;
   }
 
+  .icons {
+    display: flex;
+    justify-content: center;
+  }
+
   .right {
     order: 1;
     width: 85%;
