--- a/src/Components/WORKS/works.css
+++ b/src/Components/WORKS/works.css
@@ -77,5 +77,10 @@
 @media screen and (max-width: 768px) {
   .works-content {
     gap: 10px;
+    padding: 0;
+  }
+
+  .first {
+    padding: 10px 0 20px;
   }
 }
