--- a/src/Helpers/WorkCards/workcards.css
+++ b/src/Helpers/WorkCards/workcards.css
@@ -53,10 +53,10 @@
 
 @media screen and (max-width: 768px) {
   .flip-card {
-    width: 49%;
+    width: 48%;
   }
 
   .flip-card h2 {
-    font-size: 140%;
+    font-size: 20px;
   }
 }
